# Cool-Compiler

./: .gitignore  Annotated.hs  CMM.cf  CMMException.java  Code.hs  Compiler.hs  FunType.hs  Makefile  README-haskell.md  README.md  Setup.hs  TypeChecker.hs  lab3.cabal  lab3.hs  run-test-cabal.sh  run-test-ghc.sh  run-test-stack.sh  syntax-redesign.md
CMM/: Abs.hs  Doc.txt  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.info  Par.y  Print.hs  Skel.hs  Test.hs
testsuite/: plt-test-lab3.cabal  prelude.cc
testsuite/lab2-testsuite/bad/: arith_ass_bool_div_int.cc  arith_ass_int_min_bool.cc  arith_if_bool_min_bool.cc  ass_bool_int_parameter.cc  ass_int_bool.cc  ass_int_double.cc  ass_int_double_split.cc  cmp_ass_bool_or_int.cc  cmp_if_int_neq_bool.cc  dec_post_incorrect_type.cc  dec_pre_incorrect_type.cc  decl_cleanup_block_2.cc  fun_app_0_instead_of_1.cc  fun_app_1_instead_of_2.cc  fun_app_2_instead_of_1.cc  fun_app_incorrect_type.cc  fun_app_incorrect_type2.cc  inc_post_incorrect_type.cc  inc_pre_incorrect_type.cc  redecl_var.cc  redecl_var_after_block.cc  redecl_var_after_block_2.cc  redecl_var_after_block_3.cc  redecl_var_after_block_4.cc  redecl_var_and_parameter.cc  redecl_var_different_type.cc  redecl_var_in_one_stmt.cc  scopes_same_name.cc  undecl_fun_cleanup_between_fun.cc
testsuite/lab2-testsuite/bad-runtime/: uninit_bool.cc  uninit_int.cc  uninit_int_init.cc  uninit_while.cc
testsuite/lab2-testsuite/good/: arg_mutation_ass.cc  arg_mutation_id.cc  arg_mutation_pdec.cc  arg_mutation_pinc.cc  args_many.cc  ass_in_arith.cc  ass_in_block.cc  ass_in_cmp.cc  ass_in_else.cc  (+79 more)
(+20 files in other folders)
