cabal-version: 2.4

-- Programming Language Technology (Chalmers DAT151 / GU DIT231)
-- (C) 2022-24 Andreas Abel
-- All rights reserved.

name:                 lab3
version:              0.1
author:               Andreas Abel and the PLT team.
copyright:            (C) 2022-24 Andreas Abel
license:              NONE
                      -- All rights reserved.
synopsis:
  Haskell stub for PLT lab3
description:
  Haskell stub for Programming Language Technology lab3 (Chalmers DAT151 / GU DIT231).

tested-with:
  GHC ==9.10.1 || ==9.8.2 || ==9.6.6 || ==9.4.8 || ==9.2.8 || ==9.0.2
   || ==8.10.7 || ==8.8.4 || ==8.6.5

extra-source-files:
  CMM.cf
  Makefile
  Runtime.java
  jasmin.jar

build-type: Simple

executable lab3
  main-is:            lab3.hs
  hs-source-dirs:     .
  other-modules:
    Annotated
    Code
    Compiler
    FunType
    TypeChecker
    CMM.Abs
    CMM.Lex
    CMM.Par
    CMM.Print
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    GeneralizedNewtypeDeriving
    PatternSynonyms
    TupleSections

  build-depends:
   -- Lower bounds set to versions shipped with GHC 8.4.4
    , base       >= 4.11.1.0 && < 5
    , array      >= 0.5.2.0  && < 0.6
    , containers >= 0.5.11.0 && < 0.8
    , directory  >= 1.3.1.0  && < 1.4
    , filepath   >= 1.4.2    && < 1.6
    , mtl        >= 2.2.2    && < 2.4
    , process    >= 1.6.3.0  && < 1.7

  ghc-options:
    -Wall
    -Wcompat

